--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,14 +7,14 @@ include /etc/nginx/mime.types;
 default_type application/octet-stream;
 
 upstream django {
-    server web: 8000;
+    server web:8000;
 }
 
   server {
 listen 80;
 server_name _;
 location /static/ {
-    alias /app/staticfiles/:
+    alias /app/staticfiles/;
 }
 
 location / {
